Home Page added

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,54 @@
 /* CSS for fonts and padding. N.B. Also need google font link in the head of each page to ensure that the correct font is used */
 
-/* CSS for terminal */
-.terminal {
-  --color: #AAE3E2;
-  --animation: terminal-glow;
-  --glow: 0.1;
-  --size: 1.5;
+/* Styling for Home page elements */
 
+.top-section {
+  padding: 75px;
+  text-align: center;
+  background: #97DECE;
+  color: rgb(21, 18, 18);
+  font-size: 25px;
+  
 }
-/* CSS for fonts and padding. N.B. Also need google font link in the head of each page to ensure that the correct font is used */
+
+.xlarge-font  {
+  font-size: 3rem;
+}
+
+.text-typing {
+             
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+.text-typing {
+  padding: 20px 30px;
+  font-size: 30px;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 20px;
+}
+.text-typing p {
+  margin: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 5.5s steps(40, end),
+blink-caret .75s step-end infinite
+}
+@keyframes typing {
+  0% { width:0% }
+  100% { width:100% }
+}
+@keyframes blink {
+  0%,100% {
+    border-right:2px solid transparent;
+  }
+  50% {
+    border-right:2px solid #222;
+  }
+}
+
+/* Used throughout */
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #EAFDFC;
@@ -38,9 +78,13 @@ main > .container {
 
 };
 
-/* I'm trying to change the colour of the button when you hover over it - it won't work and I don't know why */
- 
-.btn:hover {
+/* primary button hover, please make sure this two part both exist */
+.btn-primary.active:hover{
+  color: #A0C3D2;
+  background-color: #A0C3D2;
+  border-color: #A0C3D2;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
     background-color: #A0C3D2 !important;
     border-color: #A0C3D2 !important;
 }
@@ -49,8 +93,10 @@ main > .container {
 
 /* Styling for icons on pages */
 .icon_img {
-  max-width: 15rem;
-  
+  /* max-width: 10; */
+  align-items: center;
+  height: auto;
+  padding: 1%;
 }
 
 /* Hover effect for Learn cards - do we want to keep? */
