--- a/public/styles.css
+++ b/public/styles.css
@@ -93,7 +93,10 @@ main > .container {
 
 /* Styling for icons on pages */
 .icon_img {
-  /* max-width: 10; */
+  max-height: 20rem;
+  max-width: 20rem; 
+  min-height: 10rem;
+  min-width: 10rem;
   align-items: center;
   height: auto;
   padding: 1%;
@@ -137,6 +140,13 @@ main > .container {
   width: 10rem;
 }
 
+.terminal {
+  --color: #A0C3D2;
+  --animation: terminal-glow;
+  --glow: 0.1;
+  --size: 1.5;
+  /* --font: 'Poppins', sans-serif; */
+}
 
 
 /*for volunteer*/
